# recurring_tasks

./: .gitignore  Cargo.toml  README.md  REAME.md
.github/: sendgrid.js
.github/workflows/: build_and_test.yml  send_email.yaml
src/: bin.rs  format_output.rs  lib.rs  main.rs  process_task_file.rs  tasks.rs
tasks/: example.toml  personal.toml
