[package]
name = "recurring-tasks"
version = "0.1.0"
authors = ["Douglas Anderson <hockeybuggy@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
name = "recurring_tasks"
path = "src/lib.rs"

[[bin]]
name = "recurring_tasks_bin"
path = "src/bin.rs"

[dependencies]
clap = "2.33"
cron = "0.6"
chrono = "0.4"
chrono-tz = "0.5"
toml = "0.5"
