[package]
name = "recurring-tasks"
version = "0.1.0"
authors = ["Douglas Anderson <hockeybuggy@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
name = "recurring_tasks"
path = "src/lib.rs"

[[bin]]
name = "recurring_tasks_bin"
path = "src/bin.rs"

[dependencies]
chrono = "0.4"
chrono-tz = "0.5"
clap = "2.33"
cron = "0.6"
pulldown-cmark = { version = "0.7", default-features = false }
toml = "0.5"
